UCG/Configurations/Kubernetes/nodered-deployment-cluster.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/node-red-docker-node8-nr-17-data-container-cluster:version-1
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
 #       resources:
 #         limits:
 #           cpu: 1.5
 #           memory: 1024Mi
 #         requests:  
 #           cpu: 1
 #           memory: 512Mi
