UCG/Configurations/Kubernetes/nodered-deployment-data-mapped-cloud.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ucg-nodered
spec:
  replicas: 8
  template:
    metadata:
      labels:
        app: ucg-nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/node-red-docker-node8-nr-17-data-mapped:version-4
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.8
            memory: 512Mi
          requests:  
            cpu: 0.5
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
         claimName: ucg-nodered-data-prod
