UCG/Configurations/Kubernetes/nodered-deployment-onPrem.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 6
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/node-red-docker-node8-nr-17:version-1 
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.25
            memory: 256Mi
          requests:  
            cpu: 0.1
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
         claimName: data-pv-claim
