UCG/Configurations/Kubernetes/nodered-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 16
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/node-red-docker-node8-nr-17-data-container:version-2
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.8
            memory: 1024Mi
          requests:  
            cpu: 0.5
            memory: 512Mi
