UCG/Configurations/Kubernetes/nodered-service-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucg-nodered
  labels:
     app: ucg-nodered
spec:
  selector:
    app: ucg-nodered
  type: LoadBalancer
  externalIPs : ["169.60.13.110"]
  ports:
   - protocol: TCP  
     port: 1880
