UCG/Configurations/Kubernetes/nodered-service-onPrem.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
     app: nodered
spec:
  selector:
    app: nodered
  type: LoadBalancer
  ports:
   - protocol: TCP  
     port: 1880
#  externalIPs:
#  - 192.168.1.133
